JSC:need to implement Dictionary::getWithUndefinedOrNullCheck for IDB https://bugs.webkit.org/show_bug.cgi?id=88283

Reviewed by Kentaro Hara.

No new tests, idb not working for JSC yet.

* bindings/js/Dictionary.cpp:
(WebCore::Dictionary::getWithUndefinedOrNullCheck):
* bindings/js/Dictionary.h:
(Dictionary):
* bindings/js/JSDictionary.cpp:
(WebCore::JSDictionary::getWithUndefinedOrNullCheck):
(WebCore):
* bindings/js/JSDictionary.h:
(JSDictionary):


Canonical link: https://commits.webkit.org/106149@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119484 268f45cc-cd09-0410-ab3c-d52691b4dbfc